--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: bane9's blog
+title: Branislav Brzak's blog 
 email: bbranislav99@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  WIP
+  Welcome to my blog where I delve into the art of low-level programming and explore an array of fascinating topics.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  bane9
 
 # Build settings
 remote_theme: jekyll/minima
@@ -34,6 +33,9 @@ plugins:
 
 minima:
   skin: solarized-dark
+
+auto_page_title: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
