--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Branislav Brzak's blog 
-email: bbranislav99@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Welcome to my blog where I delve into the art of low-level programming and explore an array of fascinating topics.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 remote_theme: jekyll/minima
